fix: z-index

--- a/packages/components/bolt-tooltip/src/tooltip.scss
+++ b/packages/components/bolt-tooltip/src/tooltip.scss
@@ -39,7 +39,7 @@ $bolt-tooltip-bubble-border-color: bolt-theme(background, bolt-opacity(20));
   opacity: 0;
   position: absolute;
   transform: translate3d(0, 0, 0);
-  z-index: 1;
+  z-index: bolt-z-index(tooltip);
   transition: opacity $bolt-transition;
   white-space: nowrap;
 
